<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">La Bolsa De Compras</string>
    <string name="title_section1">Inicio</string>
    <string name="title_section2">Hombres</string>
    <string name="title_section3">Mujeres</string>
    <string name="title_section4">Infantiles</string>
    <string name="title_section5">Bebés</string>
    <string name="categ_section1">Indumentaria</string>
    <string name="categ_section2">Calzado</string>
    <string name="categ_section3">Accesorios</string>
    <string name="categ_section4">Calzado niños</string>
    <string name="categ_section5">Calzado niñas</string>
    <string name="action_login">Ingresar</string>
    <string name="action_logout">Salir</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="search_hint">Buscar</string>
    <string name="notif_pref">Frecuencia de actualización</string>
    <string name="notifications">Notificaciones</string>
    <string name="connection_lost">Conexión perdida</string>
    <string name="hint_prod_name">Nombre no disponible.</string>
    <string name="hint_prod_brand">Marca no disponible.</string>
    <string name="hint_prod_price">Precio no disponible.</string>
    <string name="hint_prod_color">Color no disponible.</string>
    <string name="hint_prod_size">Talle no disponible.</string>
    <string name="hint_prod_material">Material no disponible.</string>
    <string name="prod_color">Color: </string>
    <string name="prod_size">Talle: </string>
    <string name="prod_mat">Material: </string>
    <string name="no_products">No hay productos en esta categoría.</string>
    <string name="notification_text">El pedido %1$d ha sido %2$s</string>
    <string name="notification_position_text">El pedido %1$d ha cambiado su posición</string>
    <string name="title_photos">Fotos</string>
    <string name="title_details">Detalles</string>
    <string name="brand">Marca:</string>
    <string name="hello_world">Hello World</string>
    <string name="searching_product">Búsqueda: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_subcategory">SubcategoryActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="invalid_username">Error: Usuario inválido</string>
    <string name="invalid_password">Error: Contraseña inválida</string>
    <string name="field_required">Error: Campo requerido</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Enviar</string>
    <string name="login_progress_signing_in">Ingresando &#8230;</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_order_list">Pedidos</string>
    <string name="title_activity_order_detail">Detalles de orden</string>
    <string name="action_order">Pedidos</string>
    <string name="order_text">Pedido nro: </string>
    <string name="order_status_text">Estado: </string>
    <string name="order_sent_to_text">Dirección de envio: </string>
    <string name="order_address_unknown">desconocida</string>
    <string name="order_date_received_text">Fecha de creación: </string>
    <string name="order_status_1">Creada</string>
    <string name="order_status_2">Confirmada</string>
    <string name="order_status_3">Transportada</string>
    <string name="order_status_4">Entregada</string>

    <!-- Settings -->
    <string name="account_category_title">Cuenta</string>
    <string name="account_username_title">Usuario</string>
    <string name="account_password_title">Contraseña</string>
    <string name="update_frequency_category_title">Notificaciones</string>
    <string name="update_frequency_title">Frecuencia</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
