
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.labolsadecompras.SettingsActivity$PlaceholderFragment" >
    <PreferenceCategory
        android:key="account_category"
        android:title="@string/account_category_title">
        <Preference
            android:key="username"
            android:title="@string/account_username_title"/>
        <Preference
            android:key="password"
            android:title="@string/account_password_title"/>
        <Preference
            android:key="signout"
            android:title="@string/action_logout"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="update_frequency_category"
        android:title="@string/update_frequency_category_title" >
        <ListPreference
            android:key="update_frequency"
            android:defaultValue="0"
            android:title="@string/update_frequency_title"
            android:entries="@array/frequency_titles"
            android:entryValues="@array/frequency_values"/>
    </PreferenceCategory>
    
</PreferenceScreen>